--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS if you have it -->
 </head>
 <body style="text-align: center; display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
     <h1>Welcome to My Website</h1>
-    <img src="assets/profile.jpg" alt="Profile picture of myself" style="max-width: 100%; height: auto;">
-    <p>Hi! I'm Alexia Toli
-. Welcome to my website where I share about my journey and interests!</p>
+    <!-- Profile Image -->
+    <img src="profile.jpg" alt="Profile picture of myself" style="max-width: 100%; height: auto;">
+    <p>Hi! I'm Alexia Toli. Welcome to my website where I share about my journey and interests!</p>
     <a href="about.html">Learn more about me</a>
 </body>
 </html>
