--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body style="text-align: center; display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
     <h1>Welcome to My Website</h1>
     <!-- Profile Image -->
-    <img src="profile .jpg" alt="Profile picture of myself" style="max-width: 100%; height: auto;">
+    <img src="profile .jpg" alt="Profile picture of myself" style="width: 50%; height: auto;">
+
     <p>Hi! I'm Alexia Toli. Welcome to my website where I share about my journey and interests! I am a senior in computer science and this is my last semester. I am from Santorini, Greece.</p>
     <a href="about.html">Learn more about me</a>
 </body>
